# learningos

./: .gitignore  1_1_nasil.html  1_1_nasil_2.html  1_1_ne.html  1_1_ne_1.html  1_1_neden.html  1_1_neden_1.html  ICERIK_YONETIMI.md  NOT_ALMA_REHBERI.md  SISTEM.md  SUBQUEST_EDITOR.md  docker-compose.yml  index.md  lesson_1_4.html  los-curriculum-manager.md  mufredat_arsiv.json
.gemini/: 1_kimlik.md  2_pedagoji.md  3_format.md  5_geri_bildirim.md  6_baglam.md  feedback_log.md  feedback_log.txt
.tracker/: session_subquests.json
archive/.gemini/: 2_pedagoji.md  4_oturum_baslangici.md  5_geri_bildirim.md  GEMINI.md  feedback_log.md
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: database.py  main.py
backend/app/api/routes/: dashboard.py  db_routes.py  plan.py
backend/app/models/: __init__.py
backend/app/schemas/: __init__.py
backend/app/services/: data.py  notes.py  pinned.py  plan_generator.py
backend/app/static/: index.html
curriculum/alan/: istatistik.yaml
curriculum/deneme/: deneme.yaml
data/: pinned.json  user_notes.json
scratch/: check_syntax.py  cleaned_code_debug.js  geo_content.json  geo_physical.json  index_origin_section.txt  patch.py  patch2.py  payload.json  restore_index_fixed.py  revert_diff.txt  revert_diff2.txt  revert_diff3.txt  turkce_note.json
scripts/: plan_generator.py  progress.py
study-plans/: 60-gunluk-plan.json  60-gunluk-plan.md  frozen-schedule.json
templates/: carousel.md  diagram.md  map.md  notes.md  rules.md  slide.md  slidedeck.md  split.md  splitcard.md  text.md  unit.md
(+84 files in other folders)
